--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "bermuda",
+  "homepage": "https://github.com/vintvgx/KareemSaygbe.com.git",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,6 +8,8 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.2",
     "bootstrap": "^4.6.0",
+    "gh-pages": "^3.1.0",
+    "gsap": "^3.6.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.1",
     "react-dom": "^17.0.1",
@@ -15,6 +18,8 @@
     "web-vitals": "^1.1.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
