--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bermuda",
-  "homepage": "https://github.com/vintvgx/KareemSaygbe.com.git",
+  "homepage": "https://vintvgx.github.io/KareemSaygbe.com/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
